# reside

./: Cargo.toml  README.md  dfx.json  did.sh  init.json  package-lock.json
src/core/: Cargo.toml  core.did
src/core/src/: lib.rs
