[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
candid = { version = "0.9.11", features = ["all"] }
ic-cdk = "0.11.6"
ic-stable-structures = "0.5.6"
wasm-bindgen = "0.2.82" 

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }
